--- a/src/app/components/dashboard/components/update-note/update-note.component.scss
+++ b/src/app/components/dashboard/components/update-note/update-note.component.scss
@@ -68,3 +68,79 @@
   max-height: 1600px !important;
   overflow: unset !important;
 }
+
+.rembox {
+  display: flex;
+  padding: 5px 10px;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.remboxc1 {
+  margin: 6px 6px 0 0;
+  max-width: 100%;
+
+  background-color: rgba(0, 0, 0, 0.08);
+  border-radius: 12px;
+  box-shadow: inset 0 0 0 1px transparent;
+  box-sizing: border-box;
+  letter-spacing: 0.01785714em;
+  font-family: "google-sans", Roboto, Arial, sans-serif;
+  font-size: 0.875rem;
+  font-weight: 500;
+  line-height: 1.25rem;
+  position: relative;
+}
+
+.remboxc11 {
+  justify-content: center;
+  min-width: 35px;
+  padding: 3px 5px;
+  height: 18px;
+  display: flex;
+}
+
+.clk {
+  background: url(../../../../../assets/clock.svg) no-repeat;
+  flex: 0 0 auto;
+  padding-left: 18px;
+  opacity: 0.65;
+}
+
+.time {
+  text-align: left;
+  width: calc(100% - 12px);
+  color: #3c4043;
+  cursor: pointer;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 11px;
+  margin: 0 5px;
+}
+
+.remove {
+  background: url(../../../../../assets/close.svg) no-repeat;
+  background-size: 14px 14px;
+  display: none;
+  height: 18px;
+  flex: 0 0 auto;
+  position: absolute;
+  right: 2px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 18px;
+  background-position: center;
+  flex: 1 1 auto;
+}
+
+.edited {
+  color: #5f6368;
+  letter-spacing: 0.025em;
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 1rem;
+  margin-left: auto;
+  display: block;
+}
