--- a/src/app/components/dashboard/components/user-notes/user-notes.component.scss
+++ b/src/app/components/dashboard/components/user-notes/user-notes.component.scss
@@ -113,9 +113,9 @@
   // flex-wrap: wrap;
 }
 
-.grid * {
-  flex: 1 0 auto;
-}
+// .grid * {
+//   flex: 1 0 auto;
+// }
 
 .gridele {
   width: 240px;
@@ -251,3 +251,22 @@
   font-size: 11px;
   margin: 0 5px;
 }
+
+.remove {
+  background: url(../../../../../assets/close.svg) no-repeat;
+  background-size: 14px 14px;
+  display: none;
+  height: 18px;
+  flex: 0 0 auto;
+  position: absolute;
+  right: 2px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 18px;
+  background-position: center;
+  flex: 1 1 auto;
+}
+
+// .time:hover .remove {
+//   display: block;
+// }
