--- a/src/app/components/dashboard/components/labels/labels.component.html
+++ b/src/app/components/dashboard/components/labels/labels.component.html
@@ -3,12 +3,20 @@
     <div>Edit labels</div>
     <div class="edb12">
       <div class="sty plus"></div>
-      <input type="text" placeholder="Create new label">
-      <div class="sty done"></div>
+      <input class="default" type="text" placeholder="Create new label" [formControl]="label">
+      <div class="sty done" (click)="onAdd()"></div>
+    </div>
+    <mat-error [ngStyle]="{display: exits ? 'block':'none'}">label already exists</mat-error>
+    <div class="edb12" *ngFor='let label of data.labels.sort(); let i = index;' (click)="show = !show">
+      <div class="sty label"></div>
+      <div class="sty bin" (click)="onRemove(label)"></div>
+      <input type="text" [value]=label [formControl]="editedLabel">
+      <!-- <div class="sty rename" (click)="onRename(i)" #pen></div> -->
+      <div class="sty done tla" (click)="onRename(label,i)"></div>
     </div>
   </div>
   <div class="edb2">
-    <div class="edb21">
+    <div class="edb21" (click)="close()">
       Done
     </div>
   </div>
