--- a/src/app/components/dashboard/components/user-notes/user-notes.component.html
+++ b/src/app/components/dashboard/components/user-notes/user-notes.component.html
@@ -32,9 +32,9 @@
             <div class="edi1" aria-label="Created yesterday, 10:25 AM">Edited yesterday, 10:25 AM</div>
           </div> -->
       </div>
-      <div class="rembox" [ngStyle]="{'display': (card.reminder === '') ? 'none' : 'flex'}">
+      <div class="rembox">
         <div class="remboxc1">
-          <div class="remboxc11">
+          <div class="remboxc11" [ngStyle]="{'display': (card.reminder === '') ? 'none' : 'flex'}">
             <div class="clk"></div>
             <label class="time"
               [ngStyle]="{'display': (d0|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Yesterday,
@@ -46,9 +46,14 @@
               [ngStyle]="{'display': (d1|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Tommorrow,
               {{card.reminder | date:'h:mm a'}}</label>
             <label class="time"
-              [ngStyle]="{'display':  (card.reminder|date:shortDate) > (d1|date:shortDate) || (d0|date:shortDate) > (card.reminder|date:shortDate)  ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
+              [ngStyle]="{'display':  (d0|date:shortDate) != (card.reminder|date:shortDate) && (d|date:shortDate) != (card.reminder|date:shortDate) && (d1|date:shortDate) != (card.reminder|date:shortDate) ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
           </div>
-          <div class="remove" (click)="remove()"></div>
+          <div class="dfds" (click)="remove()"></div>
+        </div>
+        <div class="remboxc1" *ngFor="let l of card.labels">
+          <div class="remboxc11">
+            <label style="font-size: 12px" class="time">{{l}}</label>
+          </div>
         </div>
       </div>
       <div class="iconbar">
@@ -74,9 +79,9 @@
           {{card.description}}
         </div>
       </div>
-      <div class="rembox" [ngStyle]="{'display': (card.reminder === '') ? 'none' : 'flex'}">
+      <div class="rembox">
         <div class="remboxc1">
-          <div class="remboxc11">
+          <div class="remboxc11" [ngStyle]="{'display': (card.reminder === '') ? 'none' : 'flex'}">
             <div class="clk"></div>
             <label class="time"
               [ngStyle]="{'display': (d0|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Yesterday,
@@ -91,6 +96,11 @@
               [ngStyle]="{'display':  (card.reminder|date:shortDate) > (d1|date:shortDate) || (d0|date:shortDate) > (card.reminder|date:shortDate)  ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
           </div>
           <div class="remove" (click)="remove()"></div>
+        </div>
+        <div class="remboxc1" *ngFor="let l of card.labels">
+          <div class="remboxc11">
+            <label style="font-size: 12px" class="time">{{l}}</label>
+          </div>
         </div>
       </div>
       <div class="iconbar">
@@ -109,9 +119,9 @@
           {{card.description}}
         </div>
       </div>
-      <div class="rembox" [ngStyle]="{'display': (card.reminder === '') ? 'none' : 'flex'}">
+      <div class="rembox">
         <div class="remboxc1">
-          <div class="remboxc11">
+          <div class="remboxc11" [ngStyle]="{'display': (card.reminder === '') ? 'none' : 'flex'}">
             <div class="clk"></div>
             <label class="time"
               [ngStyle]="{'display': (d0|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Yesterday,
@@ -126,6 +136,11 @@
               [ngStyle]="{'display':  (card.reminder|date:shortDate) > (d1|date:shortDate) || (d0|date:shortDate) > (card.reminder|date:shortDate)  ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
           </div>
           <div class="remove" (click)="remove()"></div>
+        </div>
+        <div class="remboxc1" *ngFor="let l of card.labels">
+          <div class="remboxc11">
+            <label style="font-size: 12px" class="time">{{l}}</label>
+          </div>
         </div>
       </div>
       <div class="iconbar">
@@ -144,9 +159,9 @@
           {{card.description}}
         </div>
       </div>
-      <div class="rembox" [ngStyle]="{'display': (card.reminder === '') ? 'none' : 'flex'}">
+      <div class="rembox">
         <div class="remboxc1">
-          <div class="remboxc11">
+          <div class="remboxc11" [ngStyle]="{'display': (card.reminder === '') ? 'none' : 'flex'}">
             <div class="clk"></div>
             <label class="time"
               [ngStyle]="{'display': (d0|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Yesterday,
@@ -161,6 +176,11 @@
               [ngStyle]="{'display':  (card.reminder|date:shortDate) > (d1|date:shortDate) || (d0|date:shortDate) > (card.reminder|date:shortDate)  ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
           </div>
           <div class="remove" (click)="remove()"></div>
+        </div>
+        <div class="remboxc1" *ngFor="let l of card.labels">
+          <div class="remboxc11">
+            <label style="font-size: 12px" class="time">{{l}}</label>
+          </div>
         </div>
       </div>
       <div class="iconbar">
