--- a/src/app/components/dashboard/components/user-notes/user-notes.component.scss
+++ b/src/app/components/dashboard/components/user-notes/user-notes.component.scss
@@ -212,7 +212,6 @@
 .remboxc1 {
   margin: 6px 6px 0 0;
   max-width: 100%;
-
   background-color: rgba(0, 0, 0, 0.08);
   border-radius: 12px;
   box-shadow: inset 0 0 0 1px transparent;
@@ -227,10 +226,11 @@
 
 .remboxc11 {
   justify-content: center;
-  min-width: 35px;
+  min-width: 30px;
   padding: 3px 5px;
   height: 18px;
   display: flex;
+  // width: 134px;
 }
 
 .clk {
@@ -252,7 +252,7 @@
   margin: 0 5px;
 }
 
-.remove {
+.dfds {
   background: url(../../../../../assets/close.svg) no-repeat;
   background-size: 14px 14px;
   display: none;
@@ -264,9 +264,9 @@
   transform: translateY(-50%);
   width: 18px;
   background-position: center;
-  flex: 1 1 auto;
+  // flex: 1 1 auto;
 }
 
-// .time:hover .remove {
+// .remboxc1:hover .dfds {
 //   display: block;
 // }
