--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -98,7 +98,7 @@
           <ul class="sul">
             <div class="qwer">LABELS</div>
 
-            <li class="sli" *ngFor="let l of labels">
+            <li class="sli" *ngFor="let l of labels.sort()">
               <a>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="gb_jc">
                   <path
@@ -108,8 +108,6 @@
                 <span class="stext">{{l}}</span>
               </a>
             </li>
-
-
             <li class="sli">
               <a>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="gb_mc">
@@ -117,7 +115,7 @@
                     d="M20.41 4.94l-1.35-1.35c-.78-.78-2.05-.78-2.83 0L13.4 6.41 3 16.82V21h4.18l10.46-10.46 2.77-2.77c.79-.78.79-2.05 0-2.83zm-14 14.12L5 19v-1.36l9.82-9.82 1.41 1.41-9.82 9.83z">
                   </path>
                 </svg>
-                <span class="stext" (click)="editLabels(); drawer.toggle()">Edit labels</span>
+                <span class="stext" (click)="editLabels()">Edit labels</span>
               </a>
             </li>
           </ul>
