--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -413,7 +413,7 @@ form svg {
 }
 
 .example-container {
-  height: 100%;
+  height: 90%;
   background: none;
 }
 
@@ -528,6 +528,11 @@ form svg {
 .active {
   background-color: #feefc3;
   opacity: 1;
+}
+
+.mat-drawer-backdrop.mat-drawer-shown {
+  background-color: transparent !important;
+  // background-color: rgba(0,0,0,.05);
 }
 
 // overflow: hidden;
