--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -81,6 +81,9 @@ title {
   display: flex;
   height: 44px;
   width: 101px;
+  opacity: 0.85;
+  font-family: "google-sans", "product-sans";
+  font-weight: 500;
   // display: none;
 
   .k22 {
