--- a/src/app/components/dashboard/components/icons-toolbar/icons-toolbar.component.html
+++ b/src/app/components/dashboard/components/icons-toolbar/icons-toolbar.component.html
@@ -16,7 +16,7 @@
 <div class="menu" *ngIf="pop" [ngClass]="menuStyle">
   <div class="menu1">
     <div (click)=trash(card)>Delete Note</div>
-    <div [matMenuTriggerFor]="lmenu">Add label</div>
+    <div [matMenuTriggerFor]="lmenu" (menuClosed)="isClosed(card)">Add label</div>
     <div>Copy to Google Docs</div>
   </div>
   <div class="menu2">
@@ -158,8 +158,8 @@
   </div>
   <div class="lcon">
     <div (click)="onAdd(card,l); $event.stopPropagation()" class="lcon1" *ngFor="let l of labels">
-      <div class="img cb" *ngIf="!(card.labels).includes(l)"></div>
-      <div class="img cb1" *ngIf="(card.labels).includes(l)"></div>
+      <div class="img cb" *ngIf="card != undefined  &&  !(card.labels).includes(l)"></div>
+      <div class="img cb1" *ngIf="card != undefined && (card.labels).includes(l)"></div>
       <div class="txt2">{{l}}</div>
     </div>
   </div>
