--- a/src/app/components/dashboard/components/labels/labels.component.html
+++ b/src/app/components/dashboard/components/labels/labels.component.html
@@ -1,23 +1,2 @@
-<div class="edb">
-  <div class="edb1">
-    <div>Edit labels</div>
-    <div class="edb12">
-      <div class="sty plus"></div>
-      <input class="default" type="text" placeholder="Create new label" [formControl]="label">
-      <div class="sty done" (click)="onAdd()"></div>
-    </div>
-    <mat-error [ngStyle]="{display: exits ? 'block':'none'}">label already exists</mat-error>
-    <div class="edb12" *ngFor='let label of data.labels.sort(); let i = index;' (click)="show = !show">
-      <div class="sty label"></div>
-      <div class="sty bin" (click)="onRemove(label)"></div>
-      <input type="text" [value]=label [formControl]="editedLabel">
-      <!-- <div class="sty rename" (click)="onRename(i)" #pen></div> -->
-      <div class="sty done tla" (click)="onRename(label,i)"></div>
-    </div>
-  </div>
-  <div class="edb2">
-    <div class="edb21" (click)="close()">
-      Done
-    </div>
-  </div>
-</div>
+<app-take-note (addingNote)="userinteract()"></app-take-note>
+<app-user-notes [getCards]="allCards" (actionOne)="userinteract()"></app-user-notes>
