--- a/src/app/components/dashboard/components/user-notes/user-notes.component.scss
+++ b/src/app/components/dashboard/components/user-notes/user-notes.component.scss
@@ -39,6 +39,10 @@
   box-shadow: none;
   transition: box-shadow 0.218s ease-in-out;
   // transition-property: opacity, transform;
+
+  box-sizing: border-box;
+  cursor: move;
+  background: white;
 }
 
 @media (max-width: 632px) {
@@ -58,6 +62,7 @@
   font-weight: 500;
   line-height: 1.5rem;
   padding-top: 12px;
+  cursor: text;
 
   //same
   content: "\A";
@@ -71,6 +76,10 @@
   line-height: 19px;
   min-height: 30px;
   padding: 4px 16px 12px 16px;
+  cursor: text;
+
+  white-space: pre-wrap;
+  word-wrap: break-word;
   // direction: ltr;
   // to add break
 
@@ -165,6 +174,7 @@
 .descrr {
   min-height: 30px;
   padding: 4px 16px 12px 16px;
+  max-height: 360px;
 }
 
 .titlee,
@@ -174,6 +184,7 @@
   outline: none;
   white-space: pre-wrap;
   word-wrap: break-word;
+  text-overflow: ellipsis;
 }
 
 .gridele:hover .iconbar {
@@ -270,3 +281,21 @@
 // .remboxc1:hover .dfds {
 //   display: block;
 // }
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.container.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
