--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,7 +22,7 @@
 }
 
 /deep/ .error-snackbar {
-  background: #fff;
+  background: rgba(252, 252, 252, 0.658);
   color: rgb(207, 30, 30);
   // height: 500px;
   // width: 200px
