--- a/src/app/components/dashboard/components/image-upload/image-upload.component.scss
+++ b/src/app/components/dashboard/components/image-upload/image-upload.component.scss
@@ -26,7 +26,7 @@
   text-align: center;
 }
 
-/deep/ .mat-dialog-container {
+::ng-deep .mat-dialog-container {
   position: fixed;
   width: 50%;
   transition: width 0.218s ease-out;
@@ -42,7 +42,7 @@
 }
 
 @media (max-width: 860px) {
-  /deep/ .mat-dialog-container {
+  ::ng-deep .mat-dialog-container {
     width: 90%;
     transition: width 0.218s ease-in;
     left: 5%;
