--- a/src/app/components/registration/registration.component.scss
+++ b/src/app/components/registration/registration.component.scss
@@ -169,11 +169,11 @@ h1 {
   height:80px;
 }
 
-/deep/ .mat-form-field-appearance-outline .mat-form-field-infix {
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
   padding: 0.5em 0 1em 0;
 }
 
-/deep/ .mat-form-field-infix {
+::ng-deep .mat-form-field-infix {
   border-top: 0.54375em solid transparent;
 }
 
@@ -199,7 +199,7 @@ h1 {
   padding-bottom: 0;
 }
 
-/deep/ .mat-form-field-wrapper{
+::ng-deep .mat-form-field-wrapper{
   padding-bottom: 0.5em;
 }
 
