--- a/src/app/components/dashboard/components/update-note/update-note.component.html
+++ b/src/app/components/dashboard/components/update-note/update-note.component.html
@@ -1,32 +1,29 @@
-<div class="edit" [style.background-color]="data.color">
+<div class="edit" [style.background-color]="data?.color">
   <div class="tit-des">
-    <div id="title1" contenteditable="true" [textContent]="data.title" (input)="data.title = $event.target.textContent">
+    <div id="title1" contenteditable="true" [textContent]="data?.title" (input)="data.title = $event.target.textContent">
     </div>
-    <div class="descrp" contenteditable="true" [textContent]="data.description"
+    <div class="descrp" contenteditable="true" [textContent]="data?.description"
       (input)="data.description = $event.target.textContent"></div>
-    <!-- <div class="edited">
-      <div class="edi1" aria-label="Created yesterday, 10:25 AM">Edited yesterday, 10:25 AM</div>
-    </div> -->
   </div>
   <div class="rembox">
     <div class="remboxc1">
-      <div class="remboxc11" [ngStyle]="{'display': (data.reminder === '') ? 'none' : 'flex'}">
+      <div class="remboxc11" [ngStyle]="{'display': (data?.reminder ? 'flex' : 'none')}">
         <div class="clk"></div>
         <label class="time"
-          [ngStyle]="{'display': (d0|date:shortDate) === (data.reminder|date:shortDate) ? 'block' : 'none'}">Yesterday,
-          {{data.reminder | date:'h:mm a'}}</label>
+          [ngStyle]="{'display': isSameDay(d0, data?.reminder) ? 'block' : 'none'}">Yesterday,
+          {{ data?.reminder | date:'h:mm a' }}</label>
         <label class="time"
-          [ngStyle]="{'display': (d|date:shortDate) === (data.reminder|date:shortDate) ? 'block' : 'none'}">Today,
-          {{data.reminder | date:'h:mm a'}}</label>
+          [ngStyle]="{'display': isSameDay(d, data?.reminder) ? 'block' : 'none'}">Today,
+          {{ data?.reminder | date:'h:mm a' }}</label>
         <label class="time"
-          [ngStyle]="{'display': (d1|date:shortDate) === (data.reminder|date:shortDate) ? 'block' : 'none'}">Tommorrow,
-          {{data.reminder | date:'h:mm a'}}</label>
+          [ngStyle]="{'display': isSameDay(d1, data?.reminder) ? 'block' : 'none'}">Tomorrow,
+          {{ data?.reminder | date:'h:mm a' }}</label>
         <label class="time"
-          [ngStyle]="{'display':  (data.reminder|date:shortDate) > (d1|date:shortDate) || (d0|date:shortDate) > (data.reminder|date:shortDate)  ? 'block' : 'none'}">{{data.reminder | date:'MMMM d, h:mm a'}}</label>
+          [ngStyle]="{'display': isOutsideRange(d0, d1, data?.reminder) ? 'block' : 'none'}">{{ data?.reminder | date:'MMMM d, h:mm a' }}</label>
       </div>
       <div class="remove" (click)="remove()"></div>
     </div>
-    <div class="edited" aria-label="Created yesterday, 10:25 AM">Edited {{data.updatedAt | date:'MMMM d, h:mm a'}}</div>
+    <div class="edited" aria-label="Created {{ data.updatedAt | date:'MMMM d, h:mm a' }}">Edited {{ data?.updatedAt | date:'MMMM d, h:mm a' }}</div>
   </div>
   <div class="iconbar">
     <app-icons-toolbar [card]="data" (click)="save($event)"></app-icons-toolbar>
