--- a/src/app/components/dashboard/components/user-notes/user-notes.component.html
+++ b/src/app/components/dashboard/components/user-notes/user-notes.component.html
@@ -35,16 +35,16 @@
             <div class="remboxc11" [ngStyle]="{'display': (card.reminder === '') ? 'none' : 'flex'}">
               <div class="clk"></div>
               <label class="time"
-                [ngStyle]="{'display': (d0|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Yesterday,
+                [ngStyle]="{'display': (d0|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Yesterday,
                 {{card.reminder | date:'h:mm a'}}</label>
               <label class="time"
-                [ngStyle]="{'display': (d|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Today,
+                [ngStyle]="{'display': (d|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Today,
                 {{card.reminder | date:'h:mm a'}}</label>
               <label class="time"
-                [ngStyle]="{'display': (d1|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Tommorrow,
+                [ngStyle]="{'display': (d1|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Tommorrow,
                 {{card.reminder | date:'h:mm a'}}</label>
               <label class="time"
-                [ngStyle]="{'display':  (d0|date:shortDate) != (card.reminder|date:shortDate) && (d|date:shortDate) != (card.reminder|date:shortDate) && (d1|date:shortDate) != (card.reminder|date:shortDate) ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
+                [ngStyle]="{'display':  (d0|date:'shortDate') != (card.reminder|date:'shortDate') && (d|date:'shortDate') != (card.reminder|date:'shortDate') && (d1|date:'shortDate') != (card.reminder|date:'shortDate') ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
             </div>
             <div class="dfds" (click)="remove()"></div>
           </div>
@@ -83,16 +83,16 @@
           <div class="remboxc11" [ngStyle]="{'display': (card.reminder === '') ? 'none' : 'flex'}">
             <div class="clk"></div>
             <label class="time"
-              [ngStyle]="{'display': (d0|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Yesterday,
+              [ngStyle]="{'display': (d0|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Yesterday,
               {{card.reminder | date:'h:mm a'}}</label>
             <label class="time"
-              [ngStyle]="{'display': (d|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Today,
+              [ngStyle]="{'display': (d|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Today,
               {{card.reminder | date:'h:mm a'}}</label>
             <label class="time"
-              [ngStyle]="{'display': (d1|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Tommorrow,
+              [ngStyle]="{'display': (d1|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Tommorrow,
               {{card.reminder | date:'h:mm a'}}</label>
             <label class="time"
-              [ngStyle]="{'display':  (card.reminder|date:shortDate) > (d1|date:shortDate) || (d0|date:shortDate) > (card.reminder|date:shortDate)  ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
+              [ngStyle]="{'display':  (card.reminder|date:'shortDate') > (d1|date:'shortDate') || (d0|date:'shortDate') > (card.reminder|date:'shortDate')  ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
           </div>
           <div class="remove" (click)="remove()"></div>
         </div>
@@ -123,16 +123,16 @@
           <div class="remboxc11" [ngStyle]="{'display': (card.reminder === '') ? 'none' : 'flex'}">
             <div class="clk"></div>
             <label class="time"
-              [ngStyle]="{'display': (d0|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Yesterday,
+              [ngStyle]="{'display': (d0|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Yesterday,
               {{card.reminder | date:'h:mm a'}}</label>
             <label class="time"
-              [ngStyle]="{'display': (d|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Today,
+              [ngStyle]="{'display': (d|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Today,
               {{card.reminder | date:'h:mm a'}}</label>
             <label class="time"
-              [ngStyle]="{'display': (d1|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Tommorrow,
+              [ngStyle]="{'display': (d1|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Tommorrow,
               {{card.reminder | date:'h:mm a'}}</label>
             <label class="time"
-              [ngStyle]="{'display':  (card.reminder|date:shortDate) > (d1|date:shortDate) || (d0|date:shortDate) > (card.reminder|date:shortDate)  ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
+              [ngStyle]="{'display':  (card.reminder|date:'shortDate') > (d1|date:'shortDate') || (d0|date:'shortDate') > (card.reminder|date:'shortDate')  ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
           </div>
           <div class="remove" (click)="remove()"></div>
         </div>
@@ -163,16 +163,16 @@
           <div class="remboxc11" [ngStyle]="{'display': (card.reminder === '') ? 'none' : 'flex'}">
             <div class="clk"></div>
             <label class="time"
-              [ngStyle]="{'display': (d0|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Yesterday,
+              [ngStyle]="{'display': (d0|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Yesterday,
               {{card.reminder | date:'h:mm a'}}</label>
             <label class="time"
-              [ngStyle]="{'display': (d|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Today,
+              [ngStyle]="{'display': (d|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Today,
               {{card.reminder | date:'h:mm a'}}</label>
             <label class="time"
-              [ngStyle]="{'display': (d1|date:shortDate) === (card.reminder|date:shortDate) ? 'block' : 'none'}">Tommorrow,
+              [ngStyle]="{'display': (d1|date:'shortDate') === (card.reminder|date:'shortDate') ? 'block' : 'none'}">Tommorrow,
               {{card.reminder | date:'h:mm a'}}</label>
             <label class="time"
-              [ngStyle]="{'display':  (card.reminder|date:shortDate) > (d1|date:shortDate) || (d0|date:shortDate) > (card.reminder|date:shortDate)  ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
+              [ngStyle]="{'display':  (card.reminder|date:'shortDate') > (d1|date:'shortDate') || (d0|date:'shortDate') > (card.reminder|date:'shortDate')  ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
           </div>
           <div class="remove" (click)="remove()"></div>
         </div>
