--- a/src/app/components/dashboard/components/icons-toolbar/icons-toolbar.component.html
+++ b/src/app/components/dashboard/components/icons-toolbar/icons-toolbar.component.html
@@ -40,7 +40,7 @@
       Reminder:
     </div>
     <div class="remcom">
-      <div class="ch" (click)="setReminder(card,'Today','8:00PM')">
+      <div class="ch" (click)="setReminder(card,'Today')">
         <div class="text">
           Later today
         </div>
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="remcom">
-      <div class="ch" (click)="setReminder(card,'Tommorow','8:00AM')">
+      <div class="ch" (click)="setReminder(card,'Tommorow')">
         <div class="text">
           Tomorrow
         </div>
@@ -60,7 +60,7 @@
       </div>
     </div>
     <div class="remcom">
-      <div class="ch" (click)="setReminder(card,'Mon','8:00AM')">
+      <div class="ch" (click)="setReminder(card,'Mon')">
         <div class="text">
           Next week
         </div>
