added API integration

--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -16,11 +16,11 @@
         <div>
           <mat-form-field appearance="outline" class="email">
             <mat-label>Email</mat-label>
-            <input matInput placeholder type="email">
+            <input matInput placeholder type="email" name="username" #username>
           </mat-form-field>
         </div>
         <div id="qwsqw">
-          <button mat-button class="button">Next</button>
+          <button mat-button class="button" (click)="submitUsername(username.value)">Next</button>
         </div>
       </div>
     </div>
